opam-version: "2.0"
maintainer: "palmskog@gmail.com"
version: "dev"

homepage: "https://github.com/uwplse/verdi-raft"
dev-repo: "git+https://github.com/uwplse/verdi-raft.git"
bug-reports: "https://github.com/uwplse/verdi-raft/issues"
license: "BSD-2-Clause"
synopsis: "Fault-tolerant distributed key-value store using a verified implementation of Raft consensus"

build: [make "-j%{jobs}%" "vard"]
depends: [
  "ocaml" {>= "4.05.0"}
  "coq" {>= "8.14"}
  "coq-verdi" {= "dev"}
  "coq-struct-tact" {= "dev"}
  "coq-cheerios" {= "dev"}
  "verdi-runtime" {= "dev"}
  "ocamlbuild" {build}
  "ounit" {with-test & >= "2.0.0"}
]

authors: [
  "Justin Adsuara"
  "Steve Anton"
  "Ryan Doenges"
  "Karl Palmskog"
  "Pavel Panchekha"
  "Zachary Tatlock"
  "James R. Wilcox"
  "Doug Woos"
]
