opam-version: "1.2"
version: "dev"
maintainer: "palmskog@gmail.com"

homepage: "https://github.com/uwplse/verdi-raft"
dev-repo: "https://github.com/uwplse/verdi-raft.git"
bug-reports: "https://github.com/uwplse/verdi-raft/issues"
license: "BSD"

build: [
  [ "./configure" ]
  [ make "proofalytics" ]
]
depends: [
  "coq" {>= "8.6" & < "8.7~"}
  "verdi" {= "dev"}
  "StructTact" {= "dev"}
  "cheerios" {= "dev"}
  "verdi-cheerios" {= "dev"}
]

authors: [
  "James Wilcox <>"
  "Doug Woos <>"
  "Pavel Panchekha <>"
  "Zachary Tatlock <>"
  "Steve Anton <>"
  "Karl Palmskog <>"
  "Ryan Doenges <>"
]
